--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,19 +1,21 @@
-@import url('https://fonts.googleapis.com/css2?family=KoHo&display=swap');
+@import '../../styles/color.scss';
 
 .container {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 0 1rem;
+
   height: 5rem;
-  width: 100vw;
-  background-color: #ffe9e0;
+  width: 100%;
+  padding: 0 1rem;
+
+  background-color: $translucent-silk;
 }
 
 .title {
+  color: $severely-burnt-toast;
+
   font-size: 1.5rem;
-  font-weight: 700;
+  font-weight: 600;
   font-family: 'KoHo', sans-serif;
-  color: #230903;
-  text-transform: lowercase;
 }
