--- a/src/components/Layout/Layout.module.scss
+++ b/src/components/Layout/Layout.module.scss
@@ -1,14 +1,19 @@
+@import '../../styles/color.scss';
+
 .main {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  min-width: 100vw;
+
+  min-width: 100%;
   height: 100%;
-  background-color: #ffe9e0;
+
+  background-color: $translucent-silk;
 }
 
 .content {
   flex: 1 0 auto;
-  width: 100vw;
+
+  width: 100%;
 }
