--- a/src/styles/globalStyles.scss
+++ b/src/styles/globalStyles.scss
@@ -11,6 +11,7 @@
 body {
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
+  font-family: sans-serif, Calibri;
 }
 
 input,
@@ -70,4 +71,18 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+}
+
+@font-face {
+  font-family: 'KoHo';
+  src: url('../fonts/KoHo/KoHo-Regular.ttf');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'KoHo';
+  src: url('../fonts/KoHo/KoHo-Bold.ttf');
+  font-weight: bold;
+  font-style: normal;
 }
