--- a/src/styles/globalStyles.scss
+++ b/src/styles/globalStyles.scss
@@ -55,17 +55,11 @@ body {
   margin: 0;
   height: 100%;
   font-family:
+    sans-serif,
     -apple-system,
-    BlinkMacSystemFont,
-    Segoe UI,
-    Roboto,
-    Oxygen,
-    Ubuntu,
     Cantarell,
-    Fira Sans,
     Droid Sans,
-    Helvetica Neue,
-    sans-serif;
+    Helvetica Neue;
 }
 
 a {
@@ -75,14 +69,7 @@ a {
 
 @font-face {
   font-family: 'KoHo';
-  src: url('../fonts/KoHo/KoHo-Regular.ttf');
+  src: url('../fonts/KoHo/KoHo-Regular.woff2');
   font-weight: normal;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'KoHo';
-  src: url('../fonts/KoHo/KoHo-Bold.ttf');
-  font-weight: bold;
   font-style: normal;
 }
