--- a/src/components/Row/Row.module.scss
+++ b/src/components/Row/Row.module.scss
@@ -10,6 +10,10 @@
   justify-content: center;
 }
 
+.justifyStart {
+  justify-content: flex-start;
+}
+
 .justifyEnd {
   justify-content: flex-end;
 }
