--- a/src/components/Layout/Layout.module.scss
+++ b/src/components/Layout/Layout.module.scss
@@ -3,8 +3,6 @@
 .main {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
   min-width: 100%;
   height: 100%;
   background-color: $translucent-silk;
@@ -13,4 +11,5 @@
 .content {
   flex: 1 0 auto;
   width: 100%;
+  background-color: $translucent-silk;
 }
