--- a/src/components/Authorization/Authorization.module.scss
+++ b/src/components/Authorization/Authorization.module.scss
@@ -1,49 +1,50 @@
 @import '../../styles/color.scss';
 
-.authorization {
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: end;
   width: 100%;
   height: 100%;
+}
+
+.authorization {
+  width: 100%;
+  height: fit-content;
   padding: 2rem;
   background-color: $spice-pink;
   border-radius: 10px 10px 0 0;
 }
 
 .formBox {
-  width: fit-content;
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  width: fit-content;
   margin-top: 2rem;
   background-color: $translucent-silk;
   border-radius: 10px;
 }
 
-.buttonBox {
-  display: flex;
-}
-
 .button {
   width: min-content;
   height: 2rem;
-  border-radius: 5px;
-  background-color: $spice-pink;
   color: $severely-burnt-toast;
+  background-color: $spice-pink;
+  border: 1px solid $translucent-silk;
+  border-radius: 5px;
   font-size: 1rem;
   font-weight: 300;
-  border: 1px solid $translucent-silk;
   cursor: pointer;
 
   &:hover {
     background-color: $translucent-silk;
-    border: 1px solid $severely-burnt-toast;
   }
 }
 
-.buttonRegistr,
-.buttonLogin {
+.buttonTop {
   flex-grow: 1;
   text-align: center;
-  border: 1px solid $translucent-silk;
 }
 
 .active {
@@ -52,6 +53,10 @@
 
 .hide {
   display: none;
+}
+
+.submit:hover {
+  border: 1px solid $severely-burnt-toast;
 }
 
 .form {
@@ -63,12 +68,12 @@
 }
 
 .link {
-  text-decoration: none;
-  background-color: $translucent-silk;
   color: $severely-burnt-toast;
-  border: none;
+  background-color: $translucent-silk;
+  border-bottom: 1px solid $translucent-silk;
   font-size: 1rem;
   font-weight: 300;
+  text-decoration: none;
   cursor: pointer;
 
   &:hover {
@@ -80,6 +85,7 @@
   background-color: $translucent-silk;
   border: none;
   border-bottom: 1px solid $severely-burnt-toast;
+
   &:focus {
     outline: none;
   }
