--- a/src/components/Dashboard/Dashboard.module.scss
+++ b/src/components/Dashboard/Dashboard.module.scss
@@ -96,6 +96,7 @@
   border-radius: 8px;
   font-size: 1rem;
   font-weight: 300;
+  cursor: pointer;
 
   &:hover {
     background-color: $translucent-silk;
@@ -182,6 +183,7 @@
   border-radius: 10px;
   font-size: 1rem;
   font-weight: 300;
+  cursor: pointer;
 
   &:hover {
     background-color: $translucent-silk;
