--- a/src/components/TextField/TextField.module.scss
+++ b/src/components/TextField/TextField.module.scss
@@ -1,6 +1,15 @@
 @import 'src/styles/color.scss';
 @import 'src/styles/breakpoints.scss';
 
+.label {
+  display: flex;
+  flex-direction: column;
+
+  @media (min-width: $screen-md-min) {
+    font-size: 1.4rem;
+  }
+}
+
 .input {
   background-color: $translucent-silk;
   border: none;
