--- a/src/components/Authorization/Authorization.module.scss
+++ b/src/components/Authorization/Authorization.module.scss
@@ -4,7 +4,7 @@
 .container {
   display: flex;
   justify-content: center;
-  align-items: end;
+  align-items: flex-end;
   width: 100%;
   height: 100%;
 
