Fix font size and label (#12)
* fix font size and label

* Fix textfield and smaller cosmetic issues

---------

Co-authored-by: Kamila Semotánová <kamila.semotanova@gmail.com>

--- a/src/components/TextField/TextField.module.scss
+++ b/src/components/TextField/TextField.module.scss
@@ -1,14 +1,19 @@
 @import 'src/styles/color.scss';
 @import 'src/styles/breakpoints.scss';
 
+.label {
+  display: flex;
+  flex-direction: column;
+
+  @media (min-width: $screen-md-min) {
+    font-size: 1.4rem;
+  }
+}
+
 .input {
   background-color: $translucent-silk;
   border: none;
   border-bottom: 1px solid $severely-burnt-toast;
-
-  &:focus {
-    outline: none;
-  }
 
   @media (min-width: $screen-md-min) {
     font-size: 1.4rem;
