--- a/src/components/Detail/Detail.module.scss
+++ b/src/components/Detail/Detail.module.scss
@@ -7,16 +7,33 @@
   align-items: center;
   justify-content: center;
   width: 100%;
-  padding: 2rem 1rem;
-  background-color: $spruce-stone;
-  border-radius: 10px;
 
   @media (min-width: $screen-md-min) {
     width: 80%;
   }
 }
 
-.title {
-  color: $severely-burnt-toast;
-  font-size: 1rem;
+.activity {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 80vw;
+  height: min-content;
+  padding-right: 0.3rem;
+  color: $translucent-silk;
+  background-color: $hornblende-green;
+  border: none;
+  border-radius: 10px;
+  font-size: 1.2rem;
+
+  @media (min-width: $screen-md-min) {
+    width: 43%;
+    height: 2.5rem;
+    padding: 0 1rem;
+    font-size: 1.4rem;
+  }
+}
+
+.zero {
+  background-color: $pumping-spice;
 }
