--- a/src/components/Detail/Detail.module.scss
+++ b/src/components/Detail/Detail.module.scss
@@ -40,12 +40,12 @@
   align-items: center;
   justify-content: space-between;
   margin: 1rem 0;
-  padding: 0 1rem;
+  padding: 0 2rem;
   font-size: 1.2rem;
 
   @media (min-width: $screen-md-min) {
     height: 3rem;
-    padding: 0 1rem;
+    padding: 0 4rem;
     font-size: 1.4rem;
   }
 }
@@ -71,9 +71,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 80vw;
+  width: 40%;
   height: min-content;
-  padding-right: 0.3rem;
   color: $translucent-silk;
   background-color: $hornblende-green;
   border: none;
@@ -109,6 +108,29 @@
   }
 }
 
+.done {
+  width: 2rem;
+  height: 2rem;
+  background-color: unset;
+  background-image: url('./img/icon_check_hover.png');
+  background-size: cover;
+  background-position: center;
+  border: 1px solid $translucent-silk;
+  border-radius: 8px;
+  font-size: 1rem;
+  font-weight: 300;
+  cursor: pointer;
+
+  &:hover {
+    border: 1px solid $severely-burnt-toast;
+  }
+
+  @media (min-width: $screen-md-min) {
+    width: 2.5rem;
+    height: 2.5rem;
+  }
+}
+
 .container {
   display: flex;
   flex-direction: column;
@@ -130,6 +152,12 @@
   background-size: contain;
   background-repeat: no-repeat;
   animation: backgroundAnimation 1s infinite;
+
+  @media (min-width: $screen-md-min) {
+    width: 15rem;
+    height: 15rem;
+    margin: 2rem 0;
+  }
 }
 
 .number {
@@ -137,4 +165,18 @@
   font-family: 'Mulish', sans-serif;
   font-size: 4rem;
   font-weight: 500;
+
+  @media (min-width: $screen-md-min) {
+    font-size: 5rem;
+  }
+}
+
+.streekDays {
+  font-family: 'Mulish', sans-serif;
+  font-size: 1.2rem;
+  font-weight: 300;
+
+  @media (min-width: $screen-md-min) {
+    font-size: 1.4rem;
+  }
 }
