--- a/src/components/Detail/Detail.module.scss
+++ b/src/components/Detail/Detail.module.scss
@@ -22,18 +22,6 @@
   }
 }
 
-.box {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-
-  @media (min-width: $screen-md-min) {
-    width: 80%;
-  }
-}
-
 .navigation {
   width: 100%;
   display: flex;
@@ -55,15 +43,20 @@
   height: 2rem;
   padding: 0.5rem;
   background-color: unset;
-  border: 1px hidden $translucent-silk;
   background-image: url('./img/back.png');
   background-position: center;
   background-size: contain;
   background-repeat: no-repeat;
+  border: none;
   cursor: pointer;
 
   &:hover {
-    transform: translateX(-0.3rem);
+    transform: scale(1.2);
+  }
+
+  @media (min-width: $screen-md-min) {
+    width: 2.5rem;
+    height: 2.5rem;
   }
 }
 
@@ -72,7 +65,6 @@
   align-items: center;
   justify-content: center;
   width: 40%;
-  height: min-content;
   color: $translucent-silk;
   background-color: $hornblende-green;
   border: none;
@@ -80,9 +72,7 @@
   font-size: 1.2rem;
 
   @media (min-width: $screen-md-min) {
-    width: 43%;
     height: 2.5rem;
-    padding: 0 1rem;
     font-size: 1.4rem;
   }
 }
@@ -94,17 +84,21 @@
 .delete {
   width: 2rem;
   height: 2rem;
-  padding: 0.5rem;
   background-color: unset;
-  border: 1px hidden $translucent-silk;
   background-image: url('./img/delete.png');
   background-position: center;
   background-size: contain;
   background-repeat: no-repeat;
+  border: none;
   cursor: pointer;
 
   &:hover {
     transform: scale(1.2);
+  }
+
+  @media (min-width: $screen-md-min) {
+    width: 2.5rem;
+    height: 2.5rem;
   }
 }
 
@@ -115,10 +109,9 @@
   background-image: url('./img/icon_check_hover.png');
   background-size: cover;
   background-position: center;
-  border: 1px solid $translucent-silk;
+  border: 1px hidden $translucent-silk;
   border-radius: 8px;
   font-size: 1rem;
-  font-weight: 300;
   cursor: pointer;
 
   &:hover {
@@ -164,7 +157,6 @@
   margin-bottom: 0.5rem;
   font-family: 'Mulish', sans-serif;
   font-size: 4rem;
-  font-weight: 500;
 
   @media (min-width: $screen-md-min) {
     font-size: 5rem;
@@ -174,7 +166,6 @@
 .streekDays {
   font-family: 'Mulish', sans-serif;
   font-size: 1.2rem;
-  font-weight: 300;
 
   @media (min-width: $screen-md-min) {
     font-size: 1.4rem;
