--- a/src/components/Detail/Detail.module.scss
+++ b/src/components/Detail/Detail.module.scss
@@ -1,32 +1,11 @@
 @import 'src/styles/color.scss';
 @import 'src/styles/breakpoints.scss';
 
-@keyframes backgroundAnimation {
-  0% {
-    background-image: url('./img/strike3.png');
-  }
-  20% {
-    background-image: url('./img/strike2.png');
-  }
-  40% {
-    background-image: url('./img/strike7.png');
-  }
-  60% {
-    background-image: url('./img/strike4.png');
-  }
-  80% {
-    background-image: url('./img/strike5.png');
-  }
-  100% {
-    background-image: url('./img/strike6.png');
-  }
-}
-
 .navigation {
-  width: 100%;
   display: flex;
   align-items: center;
   justify-content: space-between;
+  width: 100%;
   margin: 1rem 0;
   padding: 0 2rem;
   font-size: 1.2rem;
@@ -39,16 +18,16 @@
 }
 
 .back {
-  width: 2rem;
-  height: 2rem;
+  width: 1.2rem;
+  height: 1.2rem;
   padding: 0.5rem;
   background-color: unset;
-  background-image: url('./img/back.png');
-  background-position: center;
-  background-size: contain;
-  background-repeat: no-repeat;
+  background: no-repeat center/contain url('./img/back.svg');
   border: none;
   cursor: pointer;
+  transition:
+    background-color 0.3s ease,
+    transform 0.2s ease;
 
   &:hover {
     transform: scale(1.2);
@@ -64,12 +43,13 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 40%;
+  width: 75%;
   color: $translucent-silk;
   background-color: $hornblende-green;
   border: none;
   border-radius: 10px;
   font-size: 1.2rem;
+  text-align: center;
 
   @media (min-width: $screen-md-min) {
     height: 2.5rem;
@@ -82,15 +62,15 @@
 }
 
 .delete {
-  width: 2rem;
-  height: 2rem;
+  width: 1.2rem;
+  height: 1.2rem;
   background-color: unset;
-  background-image: url('./img/delete.png');
-  background-position: center;
-  background-size: contain;
-  background-repeat: no-repeat;
+  background: no-repeat center/contain url('./img/delete.svg');
   border: none;
   cursor: pointer;
+  transition:
+    background-color 0.3s ease,
+    transform 0.2s ease;
 
   &:hover {
     transform: scale(1.2);
@@ -106,11 +86,9 @@
   width: 2rem;
   height: 2rem;
   background-color: unset;
-  background-image: url('./img/icon_check_hover.png');
-  background-size: cover;
-  background-position: center;
+  background: no-repeat center/cover url('./img/done_check.svg');
   border: 1px hidden $translucent-silk;
-  border-radius: 8px;
+  border-radius: 10px;
   font-size: 1rem;
   cursor: pointer;
 
@@ -134,6 +112,27 @@
   margin: 1rem 0;
 }
 
+@keyframes backgroundAnimation {
+  0% {
+    background-image: url('./img/strike3.png');
+  }
+  20% {
+    background-image: url('./img/strike2.png');
+  }
+  40% {
+    background-image: url('./img/strike7.png');
+  }
+  60% {
+    background-image: url('./img/strike4.png');
+  }
+  80% {
+    background-image: url('./img/strike5.png');
+  }
+  100% {
+    background-image: url('./img/strike6.png');
+  }
+}
+
 .counter {
   display: flex;
   flex-direction: column;
@@ -155,7 +154,6 @@
 
 .number {
   margin-bottom: 0.5rem;
-  font-family: 'Mulish', sans-serif;
   font-size: 4rem;
 
   @media (min-width: $screen-md-min) {
@@ -164,7 +162,6 @@
 }
 
 .streekDays {
-  font-family: 'Mulish', sans-serif;
   font-size: 1.2rem;
 
   @media (min-width: $screen-md-min) {
