--- a/src/components/Layout/Layout.module.scss
+++ b/src/components/Layout/Layout.module.scss
@@ -9,7 +9,14 @@
 }
 
 .content {
+  display: flex;
+  justify-content: center;
   flex: 1 0 auto;
   width: 100%;
   background-color: $translucent-silk;
+}
+
+.children {
+  width: 100%;
+  max-width: 1500px;
 }
