--- a/src/components/TextField/TextField.module.scss
+++ b/src/components/TextField/TextField.module.scss
@@ -1,6 +1,10 @@
 @import 'src/styles/color.scss';
 @import 'src/styles/breakpoints.scss';
 
+.labelWrapper {
+  width: 100%;
+}
+
 .label {
   display: flex;
   flex-direction: column;
