--- a/src/components/TextField/TextField.module.scss
+++ b/src/components/TextField/TextField.module.scss
@@ -15,7 +15,7 @@
 }
 
 .input {
-  background-color: $translucent-silk;
+  background-color: transparent;
   border: none;
   border-bottom: 1px solid $severely-burnt-toast;
 
