--- a/src/components/ChangeData/ChangePassword.module.scss
+++ b/src/components/ChangeData/ChangePassword.module.scss
@@ -19,6 +19,10 @@
   color: $severely-burnt-toast;
   font-size: 1.2rem;
   font-weight: 700;
+
+  @media (min-width: $screen-md-min) {
+    font-size: 2rem;
+  }
 }
 
 .form {
@@ -41,6 +45,24 @@
   color: $translucent-silk;
   font-size: 1rem;
   font-weight: 700;
+
+  &:focus {
+    outline: transparent;
+  }
+
+  @media (min-width: $screen-md-min) {
+    font-size: 1.2rem;
+  }
+}
+
+.warning {
+  margin-top: 0.5rem;
+  color: $pumping-spice;
+  font-size: 1rem;
+
+  @media (min-width: $screen-md-min) {
+    font-size: 1.2rem;
+  }
 }
 
 .button {
