--- a/src/components/Detail/UpdateForm.module.scss
+++ b/src/components/Detail/UpdateForm.module.scss
@@ -4,8 +4,8 @@
 .updateBox {
   display: flex;
   align-items: flex-start;
-  justify-content: space-evenly;
-  width: 100%;
+  justify-content: space-around;
+  width: 75%;
 }
 
 .amountBox {
