Implement changes from code review

--- a/src/components/ChangeData/ChangePassword.module.scss
+++ b/src/components/ChangeData/ChangePassword.module.scss
@@ -47,7 +47,7 @@
   font-weight: 700;
 
   &:focus {
-    outline: transparent;
+    outline: 1px solid $translucent-silk;
   }
 
   @media (min-width: $screen-md-min) {
