--- a/src/components/ChangeData/ChangeProfile.module.scss
+++ b/src/components/ChangeData/ChangeProfile.module.scss
@@ -19,6 +19,10 @@
   color: $severely-burnt-toast;
   font-size: 1.2rem;
   font-weight: 700;
+
+  @media (min-width: $screen-md-min) {
+    font-size: 2rem;
+  }
 }
 
 .form {
@@ -39,8 +43,32 @@
   margin-bottom: 1rem;
   border: none;
   border-bottom: 1px solid $translucent-silk;
+  color: $translucent-silk;
   font-size: 1rem;
   font-weight: 700;
+
+  &:focus {
+    outline: 1px solid $translucent-silk;
+  }
+
+  @media (min-width: $screen-md-min) {
+    font-size: 1.2rem;
+  }
+}
+
+.textField::placeholder {
+  color: $wallis;
+  font-weight: 400;
+}
+
+.warning {
+  margin-top: 1rem;
+  color: $pumping-spice;
+  font-size: 1rem;
+
+  @media (min-width: $screen-md-min) {
+    font-size: 1.2rem;
+  }
 }
 
 .button {
