--- a/src/components/Authorization/Authorization.module.scss
+++ b/src/components/Authorization/Authorization.module.scss
@@ -34,7 +34,8 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  width: fit-content;
+  width: 50%;
+  min-width: fit-content;
   margin-top: 2rem;
   background-color: $translucent-silk;
   border-radius: 10px;
