--- a/src/components/Detail/Detail.module.scss
+++ b/src/components/Detail/Detail.module.scss
@@ -1,6 +1,21 @@
 @import 'src/styles/color.scss';
 @import 'src/styles/breakpoints.scss';
 
+.detailBox {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  background-color: $spruce-stone;
+  border-radius: 10px;
+
+  @media (min-width: $screen-md-min) {
+    width: 80%;
+  }
+}
+
 .navigation {
   display: flex;
   align-items: center;
