--- a/src/components/Detail/UpdateForm.module.scss
+++ b/src/components/Detail/UpdateForm.module.scss
@@ -3,17 +3,51 @@
 
 .updateBox {
   display: flex;
-  align-items: flex-start;
+  flex-direction: column;
+  align-items: center;
   justify-content: space-around;
+  gap: 1rem;
   width: 75%;
+
+  @media (min-width: $screen-md-min) {
+    flex-direction: row;
+    align-items: flex-start;
+    width: 100%;
+  }
 }
 
-.amountBox {
+.infoBox {
   display: flex;
   align-items: center;
-  gap: 0.5rem;
+  justify-content: space-between;
+  width: 13rem;
+  height: 100%;
+  gap: 1rem;
+
+  @media (min-width: $screen-md-min) {
+    width: 50%;
+  }
 }
 
+.form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5rem;
+  width: 90%;
+  height: 100%;
+  padding: 1rem;
+  background-color: $hornblende-green;
+  border-radius: 10px;
+  color: $translucent-silk;
+
+  @media (min-width: $screen-md-min) {
+    flex-direction: row;
+    align-items: flex-start;
+    width: 50%;
+  }
+}
 .done {
   border: 1px hidden $translucent-silk;
   border-radius: 10px;
