--- a/src/components/Detail/Detail.module.scss
+++ b/src/components/Detail/Detail.module.scss
@@ -1,6 +1,21 @@
 @import 'src/styles/color.scss';
 @import 'src/styles/breakpoints.scss';
 
+.detailBox {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  background-color: $spruce-stone;
+  border-radius: 10px;
+
+  @media (min-width: $screen-md-min) {
+    width: 80%;
+  }
+}
+
 .navigation {
   display: flex;
   align-items: center;
@@ -72,25 +87,6 @@
 
   &:hover {
     transform: scale(1.2);
-  }
-
-  @media (min-width: $screen-md-min) {
-    width: 2.5rem;
-    height: 2.5rem;
-  }
-}
-
-.done {
-  width: 2rem;
-  height: 2rem;
-  background: no-repeat center/cover url('./img/done_check.svg');
-  border: 1px hidden $translucent-silk;
-  border-radius: 10px;
-  font-size: 1rem;
-  cursor: pointer;
-
-  &:hover {
-    border: 1px solid $severely-burnt-toast;
   }
 
   @media (min-width: $screen-md-min) {
