--- a/src/components/Detail/Detail.module.scss
+++ b/src/components/Detail/Detail.module.scss
@@ -99,7 +99,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: start;
+  justify-content: flex-start;
   height: 100%;
   width: 100%;
   margin: 1rem 0;
