--- a/src/components/Detail/Detail.module.scss
+++ b/src/components/Detail/Detail.module.scss
@@ -8,6 +8,7 @@
   justify-content: center;
   width: 100%;
   height: 100%;
+  padding: 2rem 0;
   background-color: $spruce-stone;
   border-radius: 10px;
 
