Finish new dashboard

--- a/src/components/Dashboard/Dashboard.module.scss
+++ b/src/components/Dashboard/Dashboard.module.scss
@@ -38,7 +38,7 @@
     flex-direction: row;
     flex-wrap: wrap;
     row-gap: 1.8rem;
-    column-gap: 5rem;
+    column-gap: 2rem;
     width: 80%;
     margin: 2.2rem 0;
   }
@@ -58,7 +58,8 @@
   text-align: center;
 
   @media (min-width: $screen-md-min) {
-    width: 43%;
+    gap: 0.2rem;
+    width: 46%;
     height: 4rem;
     padding: 0 1rem;
     font-size: 1.4rem;
@@ -88,6 +89,7 @@
 
 .recordForm {
   display: flex;
+  align-items: center;
   gap: 0.5rem;
 }
 
@@ -100,6 +102,34 @@
 
   &:focus {
     outline: 1px solid $translucent-silk;
+  }
+}
+
+.submitRecordButton {
+  width: 2rem;
+  height: 2rem;
+  padding: 0.2rem;
+  background-color: inherit;
+  border: 1px solid $translucent-silk;
+  border-radius: 8px;
+  cursor: pointer;
+
+  &:hover {
+    background-color: $translucent-silk;
+  }
+}
+
+.submitRecord {
+  width: 1.5rem;
+  height: 1.5rem;
+  background-color: inherit;
+  background-image: url('./img/check.svg');
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+
+  &:hover {
+    background-image: url('./img/darkCheck.svg');
   }
 }
 
